--- a/2u/index.html
+++ b/2u/index.html
@@ -99,6 +99,7 @@
 
         .buy {
             padding-top: 40px;
+            padding-bottom: 50px;
             max-width: 640px;
         }
         .buy__title {
@@ -123,6 +124,12 @@
             text-align: center;
             max-width: 190px;
             color: #343434;
+        }
+
+        .thanks {
+            width: 100%;
+            padding-top: 55px;
+            padding-bottom: 55px;
         }
     </style>
 </head>
@@ -219,6 +226,18 @@
                                     </td>
                                 </tr>
                             </table>
+                        </td>
+                    </tr>
+                </table>
+                <table class="thanks" bgcolor="#eaeaea">
+                    <tr valign="middle">
+                        <td>
+                            <img src="https://belshed.github.io/2u/img/manager.png" alt="Managers photo">
+                        </td>
+                        <td style="place-content: 40px;">
+                            <span class="thanks__message">“Thank you for your attention”</span>
+                            <span class="thanks__position">Manager ToYou</span>
+                            <span class="thanks__name">Ekaterina Novikova</span>
                         </td>
                     </tr>
                 </table>
