--- a/2u/index.html
+++ b/2u/index.html
@@ -179,6 +179,12 @@
             color: inherit;
             font-size: inherit;
         }
+        .footer__social {
+            display: inline-block;
+        }
+        .footer__social + .footer__social {
+            margin-left: 15px;
+        }
     </style>
 </head>
 <body>
@@ -301,15 +307,23 @@
                             <table class="footer__body">
                                 <tr valign="middle">
                                     <td>
-                                        <a class="footer__download-link" href="">
+                                        <a class="footer__download-link" href="#">
                                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/download-ios.png" alt="Download for iOS">
                                         </a>
-                                        <a class="footer__download-link" href="">
+                                        <a class="footer__download-link" href="#">
                                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/download-android.png" alt="Download for Android">
                                         </a>
                                     </td>
-                                    <td>
-                                        
+                                    <td align="right">
+                                        <a class="footer__social" href="#">
+                                            <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/fb.png" alt="Our facebook">
+                                        </a>
+                                        <a class="footer__social" href="#">
+                                            <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/tw.png" alt="Our twitter">
+                                        </a>
+                                        <a class="footer__social" href="#">
+                                            <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/inst.png" alt="Our instagram">
+                                        </a>
                                     </td>
                                 </tr>
                                 <tr valign="bottom">
