--- a/2u/index.html
+++ b/2u/index.html
@@ -216,7 +216,7 @@
                     </tr>
                     <tr align="center">
                         <td style="padding-top: 20px;">
-                            <a href="#" class="hero__button">Try</a>
+                            <a href="https://toyou.io/en" class="hero__button">Try</a>
                         </td>
                     </tr>
                     <tr align="center">
@@ -233,7 +233,7 @@
                     </tr>
                     <tr>
                         <td align="center" style="padding-top: 20px;">
-                            <a href="#" class="allah__link">To order</a>
+                            <a href="https://toyou.io/en" class="allah__link">To order</a>
                         </td>
                     </tr>
                 </table>
@@ -307,21 +307,21 @@
                             <table class="footer__body">
                                 <tr valign="middle">
                                     <td>
-                                        <a class="footer__download-link" href="#">
+                                        <a class="footer__download-link" href="https://apps.apple.com/app/id1196302015">
                                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/download-ios.png" alt="Download for iOS">
                                         </a>
-                                        <a class="footer__download-link" href="#">
+                                        <a class="footer__download-link" href="https://play.google.com/store/apps/details?id=com.arammeem.android.apps.toyou">
                                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/download-android.png" alt="Download for Android">
                                         </a>
                                     </td>
                                     <td align="right">
-                                        <a class="footer__social" href="#">
+                                        <a class="footer__social" href="https://www.facebook.com/ToYouKSA/">
                                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/fb.png" alt="Our facebook">
                                         </a>
-                                        <a class="footer__social" href="#">
+                                        <a class="footer__social" href="https://twitter.com/toyouksa">
                                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/tw.png" alt="Our twitter">
                                         </a>
-                                        <a class="footer__social" href="#">
+                                        <a class="footer__social" href="https://www.instagram.com/toyouksa/">
                                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/inst.png" alt="Our instagram">
                                         </a>
                                     </td>
