--- a/2u/index.html
+++ b/2u/index.html
@@ -59,6 +59,10 @@
             width: 100%;
             padding-top: 74px;
             padding-bottom: 84px;
+            background-image: url(https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/background_church.jpg);
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
         }
         .allah__text {
             color: #ffffff;
@@ -186,6 +190,48 @@
             margin-left: 15px;
         }
     </style>
+    <style>
+        @media screen and (max-width: 550px) {
+            .hero__title, .buy__title {
+                font-size: 36px;
+            }
+
+            .benefits td, .buy__list td, .footer__body td {
+                display: block;
+                padding-bottom: 20px;
+                padding-left: 0 !important;
+            }
+
+            .footer__download-link {
+                display: block;
+            }
+            .footer__download-link + .footer__download-link{
+                margin-left: 0px;
+                margin-top: 15px;
+            }
+            .footer__social + .footer__social {
+                margin-left: 5px;
+            }
+
+            .footer__body td {
+                text-align: left;
+            }
+
+            .thanks__body td + td {
+                padding-left: 0px !important;
+            }
+            
+            .thanks__body img {
+                height: 110px;
+                width: 110px;
+            }
+
+            .allah {
+                padding-top: 50px;
+                padding-bottom: 50px;
+            }
+        }
+    </style>
 </head>
 <body>
     <table align="center" style="max-width: 900px; width: 100%; margin: 0 auto;" cellspacing="0">
@@ -225,7 +271,7 @@
                         </td>
                     </tr>
                 </table>
-                <table class="allah" align="center" background="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/background_church.jpg" cellpadding="0" cellspacing="0">
+                <table class="allah" align="center" cellpadding="0" cellspacing="0">
                     <tr>
                         <td align="center">
                             <p class="allah__text">May Allah bring lots of happiness and blessings to your lives. Happy Ramadan Kareem! Don't forget to order something for your family in ToYou app.</p>
@@ -243,23 +289,23 @@
                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/benefit-1.png" alt="Icon" class="benefits__img">
                             <p class="benefits__text">M-commerce, logistics, and a full-scope chat system. All on one platform.</p>
                         </td>
-                        <td valign="top" align="center" style="border-left: 30px solid transparent;">
+                        <td valign="top" align="center" style="padding-left: 30px;">
                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/benefit-2.png" alt="Icon" class="benefits__img">
                             <p class="benefits__text">Serving everyone. From customers to businesses. And from licensed service providers to vehicle owners.</p>
                         </td>
-                        <td valign="top" align="center" style="border-left: 30px solid transparent;">
+                        <td valign="top" align="center" style="padding-left: 30px;">
                             <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/benefit-3.png" alt="Icon" class="benefits__img">
                             <p class="benefits__text">ToYou brings a world of opportunities to everyone; it revives businesses.</p>
                         </td>
                     </tr>
                 </table>
-                <table class="buy">
+                <table class="buy" align="center">
                     <tr>
                         <td>
                             <h2 class="buy__title">What are you looking to buy?</h2>
                         </td>
                     </tr>
-                    <tr>
+                    <tr align="center">
                         <td>
                             <table class="buy__list">
                                 <tr>
