--- a/2u/index.html
+++ b/2u/index.html
@@ -30,7 +30,7 @@
         }
 
         .hero {
-            padding-top: 15px;
+            padding-top: 25px;
         }
         .hero__title{
             text-align: center;
@@ -58,7 +58,7 @@
 
         .allah {
             width: 100%;
-            padding-top: 74px;
+            padding-top: 70px;
             padding-bottom: 84px;
             background-color: #308ba5;
             background-image: url(https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/background_church.jpg);
@@ -112,7 +112,7 @@
         }
 
         .buy {
-            padding-top: 20px;
+            padding-top: 10px;
             padding-bottom: 30px;
             max-width: 720px;
         }
@@ -149,7 +149,7 @@
 
         .thanks {
             width: 100%;
-            padding-top: 55px;
+            padding-top: 45px;
             padding-bottom: 55px;
         }
         .thanks__body {
@@ -175,7 +175,7 @@
         }
 
         .footer {
-            padding-top: 30px;
+            padding-top: 20px;
             padding-bottom: 20px;
             width: 100%;
         }
@@ -190,7 +190,7 @@
         .footer__col {
             display: inline-block;
             vertical-align: middle;
-            margin-right: 95px;
+            margin-right: 115px;
         }
         .footer__col + .footer__col {
             text-align: right;
@@ -198,8 +198,8 @@
         }
         .footer__download-link {
             display: inline-block;
-            margin-right: 15px;
-            margin-bottom: 15px;
+            padding-right: 5px;
+            padding-bottom: 15px;
             color: #ffffff;
         }
         .footer__small {
@@ -219,10 +219,11 @@
         }
         .footer__social {
             display: inline-block;
-            margin-bottom: 15px;
+            padding-bottom: 15px;
+            padding-right: 15px;
         }
-        .footer__social + .footer__social {
-            margin-left: 15px;
+        .footer__social:last-child {
+            padding-right: 0px;
         }
     </style>
     <style>
@@ -281,19 +282,19 @@
                         </td>
                     </tr>
                 </table>
-                <table class="hero" cellspacing="0" cellpadding="0" >
+                <table class="hero" cellspacing="0" cellpadding="0">
                     <tr>
                         <td>
                             <h1 class="hero__title">What are you waiting for?</h1>
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding-top: 10px;">
+                        <td style="padding-top: 15px;">
                             <span class="hero__subtitle">Try our most convenient delivery: Find anything. Buy anything.</span>
                         </td>
                     </tr>
                     <tr align="center">
-                        <td style="padding-top: 20px;">
+                        <td style="padding-top: 25px;">
                             <a href="https://toyou.io/en" class="hero__button">
                                 <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/try.png" alt="Try">
                             </a>
@@ -399,7 +400,7 @@
                             <!--[if mso]>
                             </td>
                             </tr>
-                            <table>
+                            </table>
                             <![endif]-->
                         </td>
                     </tr>
@@ -415,6 +416,10 @@
                             <table class="buy__list">
                                 <tr>
                                     <td align="center">
+                                        <!--[if mso]>
+                                        <table>
+                                        <tr><td>
+                                        <![endif]-->
                                         <div class="buy-item">
                                             <!--[if mso]>
                                             <center>
@@ -437,6 +442,10 @@
                                             </center>
                                             <![endif]-->
                                         </div>
+                                        <!--[if mso]>
+                                        </td>
+                                        <td>
+                                        <![endif]-->
                                         <div class="buy-item">
                                             <!--[if mso]>
                                             <center>
@@ -459,6 +468,10 @@
                                             </center>
                                             <![endif]-->
                                         </div>
+                                        <!--[if mso]>
+                                        </td>
+                                        <td>
+                                        <![endif]-->
                                         <div class="buy-item">
                                             <!--[if mso]>
                                             <center>
@@ -481,6 +494,11 @@
                                             </center>
                                             <![endif]-->
                                         </div>
+                                        <!--[if mso]>
+                                        </td>
+                                        </tr>
+                                        </table>
+                                        <![endif]-->
                                     </td>
                                 </tr>
                             </table>
@@ -500,9 +518,24 @@
                                         <img src="https://raw.githubusercontent.com/Belshed/belshed.github.io/master/2u/img/manager.png" alt="Managers photo">
                                     </td>
                                     <td style="padding-left: 40px;">
+                                        <!--[if mso]>
+                                        <table><tr><td>
+                                        <![endif]-->
                                         <span class="thanks__message">“Thank you for your attention”</span>
+                                        <!--[if mso]>
+                                        </td></tr>
+                                        <tr><td>
+                                        <![endif]-->
                                         <span class="thanks__position">Manager ToYou</span>
+                                        <!--[if mso]>
+                                        </td></tr>
+                                        <tr><td>
+                                        <![endif]-->
                                         <span class="thanks__name">Ekaterina Novikova</span>
+                                        <!--[if mso]>
+                                        </td></tr></table>
+                                        </center>
+                                        <![endif]-->
                                     </td>
                                 </tr>
                             </table>
@@ -536,8 +569,8 @@
                                             </a>
                                         </div>
                                         <!--[if mso]>
-                                        </td></tr>
-                                        <tr><td align="right">
+                                        </td>
+                                        <td align="right">
                                         <![endif]-->
                                         <div class="footer__col">
                                             <a class="footer__social" href="https://www.facebook.com/ToYouKSA/">
@@ -558,8 +591,20 @@
                                 </tr>
                                 <tr valign="bottom">
                                     <td>
+                                        <!--[if mso]>
+                                        <table>
+                                        <tr><td align="left">
+                                        <![endif]-->
                                         <span class="footer__small">You received this email because you are registered on toyou.io. <br> This letter does not require a response. <a href="#">Unsubscribe</a></span>
+                                        <!--[if mso]>
+                                        </td>
+                                        <td align="right">
+                                        <![endif]-->
                                         <span class="footer__small">© 2021 Aram Meem LLC</span>
+                                        <!--[if mso]>
+                                        </td></tr>
+                                        </table>
+                                        <![endif]--> 
                                     </td>
                                 </tr>
                             </table>
