--- a/2u/index.html
+++ b/2u/index.html
@@ -131,6 +131,7 @@
             padding-right: 20px;
             padding-left: 20px;
             padding-bottom: 20px;
+            text-decoration: none;
         }
         .buy-item__title{
             font-weight: bold;
@@ -273,7 +274,7 @@
                 <table class="header" align="center" cellpadding="0" cellspacing="0">
                     <tr align="center">
                         <td>
-                            <a class="header__link" href="#">Open in browser</a>
+                            <a class="header__link" href="https://toyou.io/en">Open in browser</a>
                         </td>
                     </tr>
                     <tr>
@@ -420,7 +421,7 @@
                                         <table>
                                         <tr><td>
                                         <![endif]-->
-                                        <div class="buy-item">
+                                        <a href="https://toyou.io/en" class="buy-item">
                                             <!--[if mso]>
                                             <center>
                                             <table style="padding-bottom: 20px;"><tr><td align="center">
@@ -441,12 +442,12 @@
                                             </table>
                                             </center>
                                             <![endif]-->
-                                        </div>
+                                        </a>
                                         <!--[if mso]>
                                         </td>
                                         <td>
                                         <![endif]-->
-                                        <div class="buy-item">
+                                        <a href="https://toyou.io/en" class="buy-item">
                                             <!--[if mso]>
                                             <center>
                                             <table style="padding-bottom: 20px;"><tr><td align="center">
@@ -467,12 +468,12 @@
                                             </table>
                                             </center>
                                             <![endif]-->
-                                        </div>
+                                        </a>
                                         <!--[if mso]>
                                         </td>
                                         <td>
                                         <![endif]-->
-                                        <div class="buy-item">
+                                        <a href="https://toyou.io/en" class="buy-item">
                                             <!--[if mso]>
                                             <center>
                                             <table style="padding-bottom: 20px;"><tr><td align="center">
@@ -493,7 +494,7 @@
                                             </table>
                                             </center>
                                             <![endif]-->
-                                        </div>
+                                        </a>
                                         <!--[if mso]>
                                         </td>
                                         </tr>
@@ -548,7 +549,7 @@
                 </table>
                 <table class="footer" bgcolor="#414141">
                     <tr>
-                        <td>
+                        <td style="padding-left: 5px; padding-right: 5px;">
                             <!--[if mso]>
                             <center>
                             <table><tr><td width="600">
