--- a/doctorsmile/doctor.html
+++ b/doctorsmile/doctor.html
@@ -358,12 +358,12 @@
         </div>      
     </div>
     <main class="main">
-        <section class="beradcrumbs">
+        <section class="breadcrumbs">
             <div class="uk-container">
-                <ul class="beradcrumbs__list">
-                    <li class="beradcrumbs__item"><a href="./service.html" class="beradcrumbs__link">Услуги</a></li>
-                    <li class="beradcrumbs__item"><a href="./team.html" class="beradcrumbs__link">Наши специалисты</a></li>
-                    <li class="beradcrumbs__item"><a href="#" class="beradcrumbs__link reviews__control_disabled">Титок Наталья Викторовна</a></li>
+                <ul class="breadcrumbs__list">
+                    <li class="breadcrumbs__item"><a href="./service.html" class="breadcrumbs__link">Услуги</a></li>
+                    <li class="breadcrumbs__item"><a href="./team.html" class="breadcrumbs__link">Наши специалисты</a></li>
+                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link reviews__control_disabled">Титок Наталья Викторовна</a></li>
                 </ul>
             </div>
         </section>
