--- a/doctorsmile/index.html
+++ b/doctorsmile/index.html
@@ -349,14 +349,32 @@
                         <div class="hero-slide__body">
                             <span class="hero-slide__title uk-text-bold uk-h1">Акция "Счастливые часы"</span>
                             <span class="hero-slide__subtitle uk-text-light">Скидка 20 % на комплекс профессиональной гигиены со фторпрофилактикой</span>
-                            <button class="button button_green button_big hero__button">Записаться на прием</button>
+                            <button class="button button_green button_big hero__button popup-request-open">Записаться на прием</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide uk-background-cover hero__item hero-slide" style="background-image: url(./img/microscope.jpg);">
+                    <div class="uk-container">
+                        <div class="hero-slide__body">
+                            <span class="hero-slide__title uk-text-bold uk-h1">Акция "Счастливые часы"</span>
+                            <span class="hero-slide__subtitle uk-text-light">Скидка 20 % на комплекс профессиональной гигиены со фторпрофилактикой</span>
+                            <button class="button button_green button_big hero__button popup-request-open">Записаться на прием</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide uk-background-cover hero__item hero-slide" style="background-image: url(./img/microscope.jpg);">
+                    <div class="uk-container">
+                        <div class="hero-slide__body">
+                            <span class="hero-slide__title uk-text-bold uk-h1">Акция "Счастливые часы"</span>
+                            <span class="hero-slide__subtitle uk-text-light">Скидка 20 % на комплекс профессиональной гигиены со фторпрофилактикой</span>
+                            <button class="button button_green button_big hero__button popup-request-open">Записаться на прием</button>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="hero__buttons uk-flex uk-flex-between">
-                <button class="hero__control hero__control_prev slider-prev"></button>
-                <button class="hero__control hero__control_next slider-next"></button>
+                <button class="swiper__control swiper__control swiper__control_prev slider-prev"></button>
+                <button class="swiper__control swiper__control swiper__control_next slider-next"></button>
             </div>
             <div class="hero__pagination">
                 <div class="swiper-pagination"></div>
@@ -373,7 +391,7 @@
                                 <path class="fill-dark-green" d="M54.8976 42.9446C53.7052 41.8062 51.8284 41.8062 50.6355 42.9446L46.7165 39.0255C53.8387 28.2537 51.6468 13.8385 41.6448 5.67066C31.6429 -2.49718 17.0805 -1.7641 7.94945 7.36693C-1.18158 16.498 -1.91466 31.0603 6.25318 41.0623C14.421 51.0643 28.8362 53.2562 39.608 46.134L43.5271 50.0535C42.3509 51.2307 42.3509 53.1379 43.5271 54.3151L49.2106 60.0001L50.6326 58.5791L44.9481 52.8941C44.5555 52.5015 44.5555 51.8656 44.9481 51.4731L52.0546 44.3675C52.4515 43.9878 53.0777 43.9878 53.4746 44.3675L59.1596 50.052L60.5801 48.6306L54.8976 42.9446ZM2.65012 25.1795C2.65012 12.415 12.998 2.06662 25.7631 2.06662C38.5281 2.06662 48.876 12.415 48.876 25.1795C48.876 37.9446 38.5281 48.2925 25.7631 48.2925C13.0044 48.2782 2.66484 37.9387 2.65012 25.1795ZM45.5207 40.6693L49.2136 44.3636L44.9471 48.6306L41.2528 44.9372C42.8406 43.6899 44.2734 42.2571 45.5207 40.6693Z"/>
                                 <path class="fill-dark-green" d="M25.763 14.1256C24.185 14.1545 22.6369 13.6947 21.3298 12.8105L20.1458 14.4342C21.7939 15.5755 23.7586 16.1707 25.763 16.1354C27.7675 16.1707 29.7321 15.5755 31.3798 14.4342L30.1958 12.8105C28.8892 13.6947 27.3411 14.154 25.763 14.1256Z"/>
                             </svg>                                
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Профилактика</a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Профилактика</a>
                             <p class="services-item__text uk-text-small uk-text-center">Для сохранения здоровья зубов, необходимы регулярные профилактические процедуры</p>
                         </div>
                     </div>
@@ -386,7 +404,7 @@
                                 <path class="fill-dark-green" d="M47.0522 3.10449L51.0522 1.10449L51.9468 2.89355L47.9468 4.89355L47.0522 3.10449Z"/>
                                 <path class="fill-dark-green" d="M48.0522 16.8931L48.9468 15.1045L52.9468 17.1045L52.0522 18.8931L48.0522 16.8931Z"/>
                             </svg>
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Лечение зубов</a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Лечение зубов</a>
                             <p class="services-item__text uk-text-small uk-text-center">Лечение кариеса, пульпита, пломбирование и лечение зубных каналов, беремся за сложные случаи</p>
                         </div>
                     </div>
@@ -422,7 +440,7 @@
                                 <path class="fill-dark-green" d="M37.6788 25.864L37.9131 23.4452C38.1459 21.3808 38.7807 19.3814 39.7818 17.5608C41.0635 15.1382 40.5121 12.1521 38.4495 10.347C36.3875 8.54182 33.3546 8.39095 31.1234 9.98208C30.8048 10.2053 30.3806 10.2053 30.062 9.98208C28.7774 9.06143 27.1762 8.69654 25.6198 8.97033C23.7577 9.29906 22.1642 10.4969 21.3313 12.194C20.4983 13.8917 20.5258 15.8848 21.4055 17.5589C22.4066 19.3794 23.0415 21.3784 23.2743 23.4433L23.508 25.8606C23.7028 27.4517 25.0919 28.6226 26.6927 28.5454C28.2935 28.4688 29.5636 27.1698 29.6051 25.5676V22.7049C29.6051 22.1597 30.0471 21.7177 30.5922 21.7177C31.1374 21.7177 31.5794 22.1597 31.5794 22.7049V25.5676C31.6083 27.1784 32.8813 28.491 34.4908 28.5691C36.0997 28.6471 37.4942 27.4643 37.6788 25.864ZM33.5537 25.5676V22.7049C33.5537 21.0694 32.2277 19.7434 30.5922 19.7434C28.9567 19.7434 27.6307 21.0694 27.6307 22.7049V25.5676C27.6057 26.1281 27.1583 26.5769 26.5982 26.6044C26.0381 26.6314 25.5494 26.2274 25.4708 25.6721L25.2356 23.2548C24.9782 20.9349 24.2687 18.6878 23.148 16.6406C22.5609 15.5262 22.5416 14.1983 23.0959 13.067C23.6502 11.9362 24.7121 11.1379 25.9523 10.9191C26.9896 10.7331 28.0578 10.975 28.9138 11.5896C29.9188 12.3092 31.2704 12.3092 32.2754 11.5896C33.1315 10.975 34.1996 10.7331 35.2369 10.9191C36.4762 11.1389 37.5356 11.9376 38.0895 13.0679C38.6428 14.1983 38.6236 15.5248 38.0374 16.6387C36.9163 18.6858 36.2072 20.933 35.9493 23.2529L35.7146 25.6702C35.6384 26.2279 35.1492 26.6347 34.5872 26.6082C34.0251 26.5817 33.5764 26.1301 33.5537 25.5676Z"/>
                                 <path class="fill-dark-green" d="M28.0388 12.3285L27.2271 14.1283C29.3797 15.034 31.8062 15.034 33.9584 14.1283L33.1491 12.3285C31.5098 12.9884 29.6781 12.9884 28.0388 12.3285Z"/>
                             </svg>
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Хирургия</a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Хирургия</a>
                             <p class="services-item__text uk-text-small uk-text-center">Диагностика и лечение патологий зубов, челюсти и мягких тканей, проводим операции по удалению зубов, наращиванию объёма кости</p>
                         </div>
                     </div>
@@ -431,7 +449,7 @@
                             <svg width="61" height="44" viewBox="0 0 61 44" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path class="fill-dark-green" d="M59.5 25.9999H53.46C51.9741 26.0009 50.5649 25.3413 49.6138 24.1997L49.0688 23.5327C47.7397 21.9277 45.7642 20.999 43.6802 20.9999H43.5C44.0503 19.6826 44.7363 18.4262 45.5469 17.2509C48.3721 13.1733 48.1162 7.70893 44.9219 3.91352C41.7275 0.118109 36.3867 -1.06695 31.8872 1.02094C31.0107 1.43793 29.9932 1.43793 29.1172 1.02094C24.6172 -1.06695 19.2764 0.118109 16.082 3.91352C12.8877 7.70893 12.6318 13.1733 15.457 17.2509C16.2661 18.4262 16.9507 19.6826 17.5 20.9999H17.3198C15.2334 20.9985 13.2554 21.9291 11.9258 23.5366L11.3921 24.1899C10.4419 25.3369 9.0293 26.0004 7.54004 25.9999H1.5C0.947754 25.9999 0.5 26.4477 0.5 26.9999V42.9999C0.5 43.5522 0.947754 43.9999 1.5 43.9999H59.5C60.0522 43.9999 60.5 43.5522 60.5 42.9999V26.9999C60.5 26.4477 60.0522 25.9999 59.5 25.9999ZM15.5732 9.83784C15.9419 6.9975 17.6411 4.50287 20.1494 3.12055C22.6577 1.73774 25.6748 1.63276 28.2729 2.83784C29.6855 3.49799 31.3184 3.49799 32.731 2.83784C36.4102 1.1391 40.7715 2.11127 43.3809 5.21186C45.9902 8.31293 46.2026 12.7758 43.8999 16.1108C42.0269 18.8315 40.7646 21.9252 40.2002 25.1796L38.7998 33.1747C38.7153 33.6523 38.2998 33.9999 37.8149 33.9999H36.2568C35.7549 33.9995 35.3306 33.6269 35.2661 33.1288L34.166 24.6137C33.9683 23.1191 32.6948 22.0014 31.187 21.9999H29.813C28.3066 22.0034 27.0352 23.1206 26.8379 24.6137L25.7378 33.1279C25.6738 33.6264 25.2495 33.9995 24.7471 33.9999H23.1821C22.6973 33.9999 22.2817 33.6523 22.1968 33.1747L20.7998 25.1796C20.2354 21.9252 18.9731 18.8315 17.1001 16.1108C15.834 14.2797 15.2905 12.0454 15.5732 9.83784ZM58.5 41.9999H2.5V27.9999H7.54004C9.62598 27.9999 11.604 27.0698 12.9341 25.4628L13.4692 24.81C14.4189 23.663 15.8311 22.9995 17.3198 22.9999H18.2202C18.4751 23.8276 18.6787 24.6699 18.8301 25.5229L20.2241 33.5229C20.4751 34.9589 21.7241 36.0048 23.1821 35.9999H24.7432C26.249 35.996 27.5205 34.8788 27.7178 33.3857L28.8179 24.872C28.8823 24.372 29.3091 23.998 29.813 23.9999H31.187C31.6895 23.9995 32.1143 24.3725 32.1792 24.871L33.2788 33.3857C33.4771 34.8798 34.7495 35.9975 36.2568 35.9999H37.8179C39.2759 36.0034 40.5239 34.9555 40.7729 33.519L42.167 25.519C42.3184 24.6674 42.522 23.8261 42.7769 22.9999H43.6768C45.1626 22.9985 46.5723 23.6581 47.5229 24.7997L48.0679 25.4667C49.3979 27.0727 51.375 28.0014 53.46 27.9999H58.5V41.9999Z"/>
                             </svg>
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Протезирование</a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Протезирование</a>
                             <p class="services-item__text uk-text-small uk-text-center">Консультация ортопеда, моделирование вкладки, временная коронка, металлокерамическая коронка</p>
                         </div>
                     </div>
@@ -444,7 +462,7 @@
                                 <path class="fill-dark-green" d="M36.4052 48.1719H37.9804C39.4527 48.1754 40.7129 47.1173 40.9643 45.6668L42.3719 37.5889C42.8936 34.5912 44.0572 31.7419 45.7838 29.2363C47.3442 26.9786 48.0153 24.224 47.6677 21.5015C47.217 17.9925 45.1201 14.9086 42.0224 13.1992C38.9246 11.4898 35.1977 11.3597 31.9885 12.8491C31.104 13.2702 30.077 13.2702 29.1925 12.8491C24.6487 10.7409 19.2563 11.9375 16.0308 15.7699C12.8054 19.6023 12.5465 25.1199 15.3998 29.2373C17.1254 31.7429 18.289 34.5922 18.8106 37.5898L20.2182 45.6678C20.4697 47.1178 21.7299 48.1754 23.2016 48.1719H24.7778C26.2989 48.168 27.5823 47.0399 27.7819 45.5322L28.8928 36.9356C28.9578 36.4307 29.3883 36.0535 29.8976 36.055H31.285C31.7923 36.055 32.2213 36.4312 32.2863 36.9346L33.3972 45.5322C33.5968 47.0414 34.8827 48.17 36.4052 48.1719ZM31.285 34.0355H29.8976C28.3765 34.039 27.0927 35.167 26.8935 36.6748L25.7827 45.2719C25.7176 45.7753 25.2896 46.152 24.7823 46.1524H23.2016C22.712 46.1524 22.2929 45.8014 22.2071 45.3192L20.7966 37.2467C20.2266 33.9601 18.9521 30.8362 17.0608 28.089C14.7302 24.7215 14.9427 20.2107 17.5795 17.0769C20.2158 13.9437 24.624 12.9625 28.3405 14.6827C29.7669 15.3493 31.4151 15.3493 32.842 14.6827C36.5585 12.9625 40.9663 13.9437 43.6031 17.0769C46.2393 20.2107 46.4518 24.7215 44.1217 28.089C42.2309 30.8367 40.9564 33.9606 40.3855 37.2467L38.9719 45.3192C38.8862 45.8014 38.4671 46.1524 37.9775 46.1524H36.4022C35.8949 46.1524 35.4659 45.7763 35.4004 45.2729L34.2901 36.6748C34.0909 35.1665 32.8065 34.038 31.285 34.0355Z"/>
                                 <path class="fill-dark-green" d="M35.0449 16.5577C32.3372 18.3204 28.8445 18.3204 26.1362 16.5577L24.9465 18.1897C26.6026 19.3365 28.5773 19.9341 30.5913 19.8991C32.6049 19.9341 34.579 19.3365 36.2346 18.1897L35.0449 16.5577Z"/>
                             </svg>                                
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Имплантация</a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Имплантация</a>
                             <p class="services-item__text uk-text-small uk-text-center">Классическая, одноэтапная, базальная имплантация зубов, имплантация «All – on – 4», имплантация «All – on – 6»</p>
                         </div>
                     </div>
@@ -464,7 +482,7 @@
                                     </clipPath>
                                 </defs>
                             </svg>
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Эстетическая стоматология </a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Эстетическая стоматология </a>
                             <p class="services-item__text uk-text-small uk-text-center">Восстановления и реставрации деформированных зубов винирингом. Современные технологии отбеливания</p>
                         </div>
                     </div>
@@ -484,7 +502,7 @@
                                 <path class="fill-dark-green" d="M29.2277 31.4353C29.5885 31.117 30.0556 30.9457 30.5367 30.9552C31.0177 30.9648 31.4776 31.1545 31.8255 31.4869L33.1512 30.1612C32.466 29.4762 31.5422 29.0829 30.5734 29.0638C29.6047 29.0448 28.6662 29.4014 27.9546 30.0591L29.2277 31.4353Z"/>
                                 <path class="fill-dark-green" d="M33.1499 34.6875H27.8493C27.5483 34.6882 27.2518 34.7604 26.9842 34.8981C26.7165 35.0358 26.4855 35.2352 26.3099 35.4797C26.1386 35.7143 26.0264 35.9868 25.9828 36.2741C25.9393 36.5613 25.9656 36.8548 26.0596 37.1297C26.3739 38.058 26.9712 38.8645 27.7677 39.4357C28.5641 40.007 29.5195 40.3142 30.4996 40.3142C31.4797 40.3142 32.4352 40.007 33.2316 39.4357C34.028 38.8645 34.6254 38.058 34.9396 37.1297C35.0337 36.8546 35.06 36.561 35.0164 36.2736C34.9729 35.9862 34.8606 35.7136 34.6893 35.4788C34.5138 35.2343 34.2827 35.0351 34.015 34.8975C33.7474 34.7599 33.4509 34.6879 33.1499 34.6875ZM30.4996 38.4375C29.9175 38.4381 29.3493 38.2595 28.8723 37.9259C28.3952 37.5923 28.0325 37.1198 27.8334 36.5728C27.8334 36.5728 27.8409 36.5625 27.8493 36.5625L33.164 36.5288C32.9751 37.0855 32.6165 37.569 32.1386 37.9113C31.6607 38.2537 31.0875 38.4377 30.4996 38.4375Z"/>
                             </svg>
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Детская стоматология</a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Детская стоматология</a>
                             <p class="services-item__text uk-text-small uk-text-center">У нас не страшно лечить зубы и ставить брекеты даже самым маленьким пациентам, потому что врачи знают подход к детям</p>
                         </div>
                     </div>
@@ -500,7 +518,7 @@
                                 <path class="fill-dark-green" d="M23.3211 42.2001C23.5086 43.8212 24.9212 45.0195 26.551 44.9404C28.1814 44.8613 29.471 43.5317 29.5003 41.8998V38.9999C29.5003 38.4477 29.948 37.9999 30.5003 37.9999C31.0525 37.9999 31.5003 38.4477 31.5003 38.9999V41.8998C31.5296 43.5317 32.8191 44.8613 34.4495 44.9404C36.0794 45.0195 37.492 43.8212 37.6795 42.2001L37.9163 39.7499C38.1521 37.6586 38.7952 35.6332 39.8093 33.789C41.1077 31.3349 40.5491 28.31 38.4602 26.4814C36.3709 24.6528 33.2986 24.4999 31.0383 26.1117C30.7156 26.3378 30.2859 26.3378 29.9632 26.1117C28.6619 25.1791 27.0403 24.8095 25.4632 25.0868C23.5769 25.4198 21.9627 26.6332 21.1189 28.3525C20.2752 30.0722 20.303 32.0912 21.1941 33.787C22.2088 35.6313 22.8518 37.6562 23.0872 39.748L23.3211 42.2001ZM22.5554 30.3261C22.8411 28.6625 24.1389 27.3573 25.8001 27.061C26.8509 26.8735 27.9329 27.1186 28.8001 27.7402C29.8181 28.4692 31.1873 28.4692 32.2053 27.7402C33.0725 27.1176 34.1546 26.8725 35.2053 27.061C36.4607 27.2836 37.5344 28.0927 38.095 29.2377C38.6555 30.3827 38.636 31.7265 38.0422 32.8549C36.906 34.9301 36.1873 37.2084 35.927 39.56L35.6892 42.0087C35.6116 42.5742 35.1145 42.9863 34.5447 42.9579C33.9749 42.9296 33.5213 42.4702 33.5003 41.8998V38.9999C33.5003 37.3432 32.157 35.9999 30.5003 35.9999C28.8435 35.9999 27.5003 37.3432 27.5003 38.9999V41.8998C27.4754 42.4677 27.0217 42.9223 26.4544 42.9501C25.887 42.9775 25.3924 42.5683 25.3123 42.0058L25.0745 39.5571C24.8142 37.205 24.0955 34.9272 22.9593 32.852C22.5515 32.0776 22.4099 31.1908 22.5554 30.3281V30.3261Z"/>
                                 <path class="fill-dark-green" d="M33.9102 30.312L33.0898 28.4888C31.4292 29.1572 29.5737 29.1572 27.9131 28.4888L27.0908 30.312C29.2715 31.2295 31.7295 31.2295 33.9102 30.312Z"/>
                             </svg>
-                            <a href="#" class="services-item__title uk-text-bold uk-text-center">Рентген-диагностика</a>
+                            <a href="./service.html" class="services-item__title uk-text-bold uk-text-center">Рентген-диагностика</a>
                             <p class="services-item__text uk-text-small uk-text-center">Современный и быстрый способ диагностики полости рта, который позволяет верно поставить диагноз и назначить план лечения</p>
                         </div>
                     </div>
