--- a/doctorsmile/faq/faq.html
+++ b/doctorsmile/faq/faq.html
@@ -358,11 +358,11 @@
         </div>      
     </div>
     <main class="main">
-        <section class="beradcrumbs">
+        <section class="breadcrumbs">
             <div class="uk-container">
-                <ul class="beradcrumbs__list">
-                    <li class="beradcrumbs__item"><a href="/dentko/index.html" class="beradcrumbs__link">Главная</a></li>
-                    <li class="beradcrumbs__item"><a href="#" class="beradcrumbs__link reviews__control_disabled">Вопрос-ответ</a></li>
+                <ul class="breadcrumbs__list">
+                    <li class="breadcrumbs__item"><a href="/dentko/index.html" class="breadcrumbs__link">Главная</a></li>
+                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link reviews__control_disabled">Вопрос-ответ</a></li>
                 </ul>
             </div>
         </section>
