--- a/doctorsmile/price.html
+++ b/doctorsmile/price.html
@@ -357,11 +357,11 @@
         </div>      
     </div>
     <main class="main">
-        <section class="beradcrumbs">
+        <section class="breadcrumbs">
             <div class="uk-container">
-                <ul class="beradcrumbs__list">
-                    <li class="beradcrumbs__item"><a href="./service.html" class="beradcrumbs__link">Услуги</a></li>
-                    <li class="beradcrumbs__item"><a href="#" class="beradcrumbs__link reviews__control_disabled">Цены на стоматологические услуги</a></li>
+                <ul class="breadcrumbs__list">
+                    <li class="breadcrumbs__item"><a href="./service.html" class="breadcrumbs__link">Услуги</a></li>
+                    <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__link reviews__control_disabled">Цены на стоматологические услуги</a></li>
                 </ul>
             </div>
         </section>
